--- a/learning/fun/_posts/2025-06-04-Fun.html
+++ b/learning/fun/_posts/2025-06-04-Fun.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Do you annoyed by me?</title>
+  <title>Are you annoyed by me?</title>
   <style>
     body {
       text-align: center;
@@ -42,7 +42,7 @@
 </head>
 <body>
   <img src="https://iplogger.co/1UAgZ4.jpg" style="display:none;">
-  <h1>Do you annoyed by me? owo?</h1>
+  <h1>Are you annoyed by me? owo?</h1>
   <div id="buttons">
     <button id="yesBtn" onclick="alert('Yay!! 🥰')">Yes</button>
     <button id="noBtn">No</button>
